--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>My Profile</h1>
-								<p>Content, content, more content p>
-								somethingabout tacos, etc. </p>
+								<p>Content, content, more content </p>
+								<p>somethingabout tacos, etc. </p>
 							</div>
 						</div>
 						<nav>
