--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>My Profile</h1>
-								<p>Content, content, more content </p>
-								<p>somethingabout tacos, etc. </p>
+								<h1>Clyde Montaner</h1>
+								<p>A Quick Introduction</p>
+								<p> Name: Clyde Montaner
+Student Number: s3662185
+email: s3662185@student.rmit.edu.au
+Born in the Philippines, spending my childhood in England, and my adolescence in Australia, I have a very diverse background influenced by my Filipino Heritage and external Anglo factors, and so I can speak both Tagalog and English. May hobbies include swimming, playing card games and spending time with my dog, Jaxon.
+</p>
 							</div>
 						</div>
 						<nav>
