--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 							<div class="inner">
 								<h1>Clyde Montaner</h1>
 								<p>A Quick Introduction</p>
-								<p> Name: Clyde Montaner <p>
-								<p> Student Number: s3662185 <p>
+								<p> Name: Clyde Montaner
+								<p> Student Number: s3662185
 								<p> email: s3662185@student.rmit.edu.au </p>
 								<p> Born in the Philippines, spending my childhood in England, and my adolescence in Australia, I have a very diverse background influenced by my Filipino Heritage and external Anglo factors, and so I can speak both Tagalog and English. May hobbies include swimming, playing card games and spending time with my dog, Jaxon. </p>
 
