--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
+								<li><a href="#extra">Extra</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -65,6 +66,13 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
+						
+						<!-- Extra -->
+					            	<article id="major">
+								<h2 class="major">Extra</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>Extra information</p>
+							</artcle>
 
 						<!-- Contact -->
 							<article id="contact">
