--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h2 class="major">Extra</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Extra information</p>
-							</artcle>
+							</article>
 
 						<!-- Contact -->
 							<article id="contact">
