--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</article>
 						
 						<!-- Extra -->
-					            	<article id="major">
+					            	<article id="extra">
 								<h2 class="major">Extra</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Extra information</p>
